# healthcare-entity-resolution

./: .gitignore  pyproject.toml
dashboard/: app.py
dashboard/components/: __init__.py  filters.py  network_viz.py
dashboard/pages/: 01_physician_search.py  02_referral_network.py  03_data_provenance.py  04_resolution_stats.py
data_generator/: facilities.py  generate.py  names.py  noise.py
scripts/: generate_data.py  run_pipeline.py  seed_db.py
sql/: 001_create_tables.sql  002_indexes.sql  drop_all.sql
src/physician_resolution/: __init__.py  config.py  exceptions.py  logging.py  pipeline.py
src/physician_resolution/analysis/: __init__.py  cluster_report.py  data_quality.py  evaluation.py  match_quality.py
src/physician_resolution/canonicalization/: __init__.py  confidence.py  ids.py  merge.py
src/physician_resolution/db/: __init__.py  bulk.py  session.py
src/physician_resolution/db/models/: __init__.py  canonical.py  mapping.py  matches.py  (+2 more)
src/physician_resolution/etl/: __init__.py  geocoder.py  loaders.py  name_parser.py  normalizer.py
src/physician_resolution/graph/: __init__.py  builder.py  clustering.py  overmatching.py  pruning.py  quality.py
src/physician_resolution/matching/: __init__.py  blocking.py  classifier.py  similarity.py
src/physician_resolution/network/: __init__.py  influence.py  referrals.py
src/physician_resolution/schemas/: __init__.py  clusters.py  entities.py  matches.py  records.py
tests/: __init__.py  conftest.py  test_blocking.py  test_clustering.py  test_integration.py  test_name_parser.py  test_similarity.py
